# cpp-engine

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
include/: Component.hpp  ComponentRegister.hpp  ComponentStorage.hpp  Engine.hpp  Entity.hpp  Health.hpp  Position.hpp  Resource.hpp  System.hpp  Transform3D.hpp  Vector3D.hpp  Window.hpp
include/component/: Health.hpp  Position.hpp
include/components/: Health.hpp  Position.hpp
include/core/: Component.hpp  Engine.hpp  System.hpp  Window.hpp
src/: Component.cpp  ComponentRegister.cpp  Engine.cpp  Entity.cpp  Health.cpp  Position.cpp  Resource.cpp  System.cpp  Transform3D.cpp  Window.cpp
src/component/: Health.cpp  Position.cpp
src/components/: Health.cpp  Position.cpp
src/core/: Component.cpp  Engine.cpp  System.cpp  Window.cpp
test/: test.cpp
